--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -1,3 +1,6 @@
+
+/* ====  Components/List/style.css  ==== */
+
 .list-group-item {
   background-color: rgb(34, 34, 34);
   border: rgb(69, 68, 68) solid 1px;
