--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,3 +1,6 @@
+
+/* ====  Components/Jamborton/style.css  ==== */
+
 .jumbotron {
   padding: 100px;
   background-image: url(./images/google_books.jpg);
